---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var cn : char(4)\nvar s : string\nvar sn : string(4)\n\n% chars\nget cn : 0\nget s : 0\nget sn : 0\n\n% lines\nget s : *\nget sn : *\n"
---
"cn"@(FileId(1), 4..6) [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(0), BodyId(0)))
"s"@(FileId(1), 21..22) [ConstVar(Var, No)]: string
"sn"@(FileId(1), 36..38) [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(0), BodyId(1)))
"<root>"@(dummy) [Module(No)]: <error>

